--- a/TicTacToe/GameTicTacToe/GameTicTacToe/Shared/NavMenu.razor
+++ b/TicTacToe/GameTicTacToe/GameTicTacToe/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/tictactoe">
+            <NavLink class="nav-link" href="/tic-tac-toe">
                 <span class="oi oi-plus" aria-hidden="true"></span>Game
             </NavLink>
         </li>
